--- a/index.ipynb
+++ b/index.ipynb
@@ -39,9 +39,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting surprise\n",
+      "  Downloading https://files.pythonhosted.org/packages/61/de/e5cba8682201fcf9c3719a6fdda95693468ed061945493dea2dd37c5618b/surprise-0.1-py2.py3-none-any.whl\n",
+      "Collecting scikit-surprise (from surprise)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/4d/fc/cd4210b247d1dca421c25994740cbbf03c5e980e31881f10eaddf45fdab0/scikit-surprise-1.0.6.tar.gz (3.3MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 3.3MB 8.6MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting joblib>=0.11 (from scikit-surprise->surprise)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/cd/c1/50a758e8247561e58cb87305b1e90b171b8c767b15b12a1734001f41d356/joblib-0.13.2-py2.py3-none-any.whl (278kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 286kB 19.4MB/s ta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.11.2 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from scikit-surprise->surprise) (1.16.3)\n",
+      "Requirement already satisfied: scipy>=1.0.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from scikit-surprise->surprise) (1.1.0)\n",
+      "Requirement already satisfied: six>=1.10.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from scikit-surprise->surprise) (1.11.0)\n",
+      "Building wheels for collected packages: scikit-surprise\n",
+      "  Running setup.py bdist_wheel for scikit-surprise ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/gentle-parameter-7767/.cache/pip/wheels/ec/c0/55/3a28eab06b53c220015063ebbdb81213cd3dcbb72c088251ec\n",
+      "Successfully built scikit-surprise\n",
+      "Installing collected packages: joblib, scikit-surprise, surprise\n",
+      "Successfully installed joblib-0.13.2 scikit-surprise-1.0.6 surprise-0.1\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.1.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install surprise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset jester could not be found. Do you want to download it? [Y/n] Y\n",
+      "Trying to download dataset from http://eigentaste.berkeley.edu/dataset/jester_dataset_2.zip...\n",
+      "Done! Dataset jester has been saved to /home/gentle-parameter-7767/.surprise_data/jester\n"
+     ]
+    }
+   ],
    "source": [
     "from surprise import Dataset\n",
     "from surprise.model_selection import train_test_split\n",
@@ -50,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +104,7 @@
        "surprise.dataset.DatasetAutoFolds"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +167,7 @@
      "output_type": "stream",
      "text": [
       "352288\n",
-      "('54373', '60', 11.062)\n"
+      "('59790', '64', 10.625)\n"
      ]
     }
    ],
@@ -142,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of users:  58766 \n",
+      "Number of users:  58784 \n",
       "\n",
       "Number of items:  140 \n",
       "\n"
@@ -188,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -218,10 +263,10 @@
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.knns.KNNBasic at 0x11caae940>"
+       "<surprise.prediction_algorithms.knns.KNNBasic at 0x7fc8bc9c89b0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,28 +285,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.        , 0.91999815, 0.84803545, ..., 0.91323232, 0.91887346,\n",
-       "        0.92105998],\n",
-       "       [0.91999815, 1.        , 0.84653856, ..., 0.91321288, 0.89122102,\n",
-       "        0.9377387 ],\n",
-       "       [0.84803545, 0.84653856, 1.        , ..., 0.84192319, 0.84191848,\n",
-       "        0.85370128],\n",
+       "array([[1.        , 0.9124441 , 0.8209172 , ..., 0.89879044, 0.87189477,\n",
+       "        0.93623142],\n",
+       "       [0.9124441 , 1.        , 0.85567273, ..., 0.88191424, 0.87334514,\n",
+       "        0.91751555],\n",
+       "       [0.8209172 , 0.85567273, 1.        , ..., 0.81853454, 0.79628315,\n",
+       "        0.83175947],\n",
        "       ...,\n",
-       "       [0.91323232, 0.91321288, 0.84192319, ..., 1.        , 0.93339552,\n",
-       "        0.91814107],\n",
-       "       [0.91887346, 0.89122102, 0.84191848, ..., 0.93339552, 1.        ,\n",
-       "        0.92379876],\n",
-       "       [0.92105998, 0.9377387 , 0.85370128, ..., 0.91814107, 0.92379876,\n",
+       "       [0.89879044, 0.88191424, 0.81853454, ..., 1.        , 0.92937713,\n",
+       "        0.91864949],\n",
+       "       [0.87189477, 0.87334514, 0.79628315, ..., 0.92937713, 1.        ,\n",
+       "        0.89283178],\n",
+       "       [0.93623142, 0.91751555, 0.83175947, ..., 0.91864949, 0.89283178,\n",
        "        1.        ]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,15 +333,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 4.5057\n",
-      "4.505684958221031\n"
+      "RMSE: 4.5077\n",
+      "4.507748470532835\n"
      ]
     }
    ],
@@ -313,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -322,8 +367,8 @@
      "text": [
       "Computing the pearson similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "RMSE: 4.2731\n",
-      "4.273050862297592\n"
+      "RMSE: 4.2849\n",
+      "4.284936779839782\n"
      ]
     }
    ],
@@ -585,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
